<resources>
    <string name="app_name">Weather Report</string>
    <string name="menu_maps">Map</string>
    <string name="menu_report">Add a report</string>

    <string name="weather_type_clear_sky">Clear sky</string>
    <string name="weather_type_few_cloud">Few cloud</string>
    <string name="weather_type_partly_cloudy">Partly cloudy</string>
    <string name="weather_type_overcast">Overcast</string>
    <string name="weather_type_fog">Fog</string>
    <string name="weather_type_showers">Showers</string>
    <string name="weather_type_rain">Rain</string>
    <string name="weather_type_snow">Snow</string>
    <string name="temperature">Temperature</string>
    <string name="add">Add</string>
    <string name="weather_type">Weather</string>
    <string name="sort_settings">Sort settings</string>
    <string name="radius">Radius (km)</string>
    <string name="number_of_reports">Number of reports</string>
    <string name="search">Search</string>
    <string name="permission_denied">The application needs permission to access the location</string>
    <string name="current_location">You are here</string>
    <string name="report_success">Report registered</string>
    <string name="report_error">Report failed</string>
    <string name="degree" translatable="false">°C</string>
</resources>